<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.minhagasosa.RoutesActivity"
    tools:showIn="@layout/activity_routes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:id="@+id/button_mapa"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="true"
            android:text="@string/choise_from_map" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/route_title_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/et_route_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/route_title"
                android:inputType="textShortMessage" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/type_route"
            android:textSize="16sp" />

        <!--    <RadioGroup
                android:id="@+id/route_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <RadioButton
                    android:id="@+id/radio_only_going"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/route_only_going" />

                <RadioButton
                    android:id="@+id/radio_with_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/route_with_come_back" />
            </RadioGroup>   -->


        <CheckBox
            android:id="@+id/check_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/going_and_back" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/distance_going_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/et_distance_going"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dist_going"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/distance_comeback_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/et_distance_comeback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dist_come_back"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/check_type_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/type_routine_adicional" />

        <CheckBox
            android:id="@+id/check_repeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/repeat_wekly" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/times_routes_wraper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/ed_times_routes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/times_routes_week"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</ScrollView>
