...
    <string name="destiny_message">Ponto de destino selecionado, confirme para calcular a rota entre os pontos</string>
    <string name="origin_text">Ponto de origem selecionado, selecione o ponto de destino</string>
    <string name="Destiny">Destino</string>
    <string name="origin">Origem</string>
    <string name="choice_vehicle">Escolha seu veículo</string>
    <string name="consumo_principais_rotas">Consumo Nas Principais Rotas</string>
    <string name="title_activity_planning">Planejamento</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="compare_gastos">Compare os seus gastos no mês anterior com os do mês atual</string>
    <string name="consumo_mes_anterior">No mês passado, você gastou no total: xxx reais com combustível</string>
    <string name="distancia_mes_anterior">No mês passado, você percorreu no total: </string>
    <string name="kilometers">quilômetros</string>
    <string name="capacidade_tanque">Capacidade do tanque (Litros)</string>
...
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
...
